--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,7 +1,65 @@
-.footer{
+/*.footer{
     position: fixed;
     width: 100%;
     height: 50px;
     top:92%;
     background-color: #1B1B1B;
+}
+
+.sidenav {
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 500px;
+    margin-top:183px;
+    margin-bottom:10px;
+    
+  }
+  
+  .sidenav a {
+    padding: 6px 6px 6px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  .main {
+    margin-left: 200px;
+  }*/
+  
+.cmp{
+width:200px;
+height:100px;
+background-color:rgb(117, 117, 117);
+margin-left: 100px;
+border-radius:20px;
+color: aliceblue;
+}
+
+.cmp:hover{
+    width:400px;
+height:100px;
+background-color:rgb(196, 196, 196);
+margin-left: 100px;
+border-radius: 20px;
+transition: 1.5s;
+}
+
+.clr{
+    background-color: darkslategrey;
+
+}
+
+.wdth{
+    width: 200px;
 }
